--- a/project.html
+++ b/project.html
@@ -129,7 +129,6 @@
             Finally, a 1% rise in the percentage of a state's population with a bachelor's degree or more should result in an average increase in state vaccination coverage of between 0.67% and 0.79%, according to OLS models and FE model 8 where the coefficient on education is positive and substantial.
             Most of these state-level findings concur with individual-level findings from the highlighted logistic models in Section 2.
         </p>
-        <!-- use the results table that I made in excel – “TABLES TO USE”, OLS Results – either page is ok -->
         <table>
             <tr>
                 <td>VARIABLES</td>
@@ -142,6 +141,7 @@
                 <td>(7)</td>
                 <td>(8)</td>
                 <td>(9)</td>
+                <td>(10)</td>
             </tr>
             <tr>
                 <td>Income</td>
@@ -151,6 +151,7 @@
                 <td>0.0045983</td>
                 <td>0.0004008***</td>
                 <td>0.0006771*</td>
+                <td>-</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
@@ -166,6 +167,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td>Income ^2</td>
@@ -173,6 +175,7 @@
                 <td>-</td>
                 <td> -1.09e-08*</td>
                 <td>-3.21e-08</td>
+                <td>-</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
@@ -190,6 +193,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td>Democrat</td>
@@ -201,6 +205,7 @@
                 <td>0.9358065** </td>
                 <td>0.5918859***</td>
                 <td> 0.7188047*</td>
+                <td>-</td>
                 <td>-</td>
             </tr>
             <tr>
@@ -214,6 +219,7 @@
                 <td>(0.0895951)</td>
                 <td>(0.065091)</td>
                 <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td>Democrat^2</td>
@@ -221,6 +227,7 @@
                 <td>-</td>
                 <td> -0.0209493***</td>
                 <td>-0.0222024</td>
+                <td>-</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
@@ -238,6 +245,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td>Republican</td>
@@ -250,7 +258,263 @@
                 <td>-</td>
                 <td>-</td>
                 <td>-0.561159***</td>
+                <td>-0.6062844</td>
             </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>(0.0990377)</td>
+                <td>(0.110767)</td>
+            </tr>
+            <tr>
+                <td>Black</td>
+                <td>-31.26037***</td>
+                <td>-114.7341</td>
+                <td>-37.10826**</td>
+                <td>35.56031</td>
+                <td>-30.65093***</td>
+                <td>41.00687** </td>
+                <td>-29.52473***</td>
+                <td>13.28143</td>
+                <td>-23.53764***</td>
+                <td>8.748332</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>(6.800775)</td>
+                <td>(54.93911)</td>
+                <td>(15.64079)</td>
+                <td>(67.24619)</td>
+                <td>(5.818826)</td>
+                <td>(1.570517)</td>
+                <td>(4.566139)</td>
+                <td>(5.053949)</td>
+                <td>(4.356314)</td>
+                <td>(12.19962)</td>
+            </tr>
+            <tr>
+                <td>Black^2</td>
+                <td>-</td>
+                <td>-</td>
+                <td>60.9079</td>
+                <td>-22.66758 </td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>(38.34182)</td>
+                <td>(236.0603)</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Age 0-34</td>
+                <td>-69.3686*</td>
+                <td>487.0256</td>
+                <td>-1316.784***</td>
+                <td>-2434.529 </td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td> (38.59497)</td>
+                <td>(370.8751)</td>
+                <td>(295.4562)</td>
+                <td>(1355.262)</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Age 0-34^2</td>
+                <td>-</td>
+                <td>-</td>
+                <td>1406.426*** </td>
+                <td>2623.611</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>(326.277)</td>
+                <td>(1404.359)</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Age 19-34</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-125.452*** </td>
+                <td>-126.1284</td>
+                <td>-153.6228***</td>
+                <td>16.77131</td>
+                <td>-171.4477*** </td>
+                <td>-146.7112</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>(37.83541)</td>
+                <td>(39.55346)</td>
+                <td>(35.47495)</td>
+                <td>(38.94885)</td>
+                <td>(34.62379)</td>
+                <td>(50.22007)</td>
+            </tr>
+            <tr>
+                <td>Education</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>0.7899942*** </td>
+                <td>0.6722387*</td>
+                <td>0.7995392***</td>
+                <td>0.8274084</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>(0.1259004)</td>
+                <td>(0.1141864)</td>
+                <td>(0.136419)</td>
+                <td>(0.2219998)</td>
+            </tr>
+            <tr>
+                <td>Constant</td>
+                <td> 50.29934**</td>
+                <td> -156.4554 </td>
+                <td>238.3277***</td>
+                <td>403.6915</td>
+                <td>37.65037*** </td>
+                <td>9.062696</td>
+                <td>46.43367***</td>
+                <td>7.84944</td>
+                <td>96.80427***</td>
+                <td> 91.85099*</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>(18.06561)</td>
+                <td>(144.1061)</td>
+                <td>(64.9411)</td>
+                <td>(263.7733)</td>
+                <td>(6.219555)</td>
+                <td>(5.444274)</td>
+                <td>(6.798758)</td>
+                <td>(7.993108)</td>
+                <td>(8.793302)</td>
+                <td>(11.55951)</td>
+            </tr>
+            <tr>
+                <td>R-squared</td>
+                <td>0.7875</td>
+                <td>0.9979</td>
+                <td>0.8895</td>
+                <td>0.9998</td>
+                <td>0.8012</td>
+                <td>1.0000</td>
+                <td>0.8578</td>
+                <td>1.0000</td>
+                <td>0.8388</td>
+                <td>0.9997</td>
+            </tr>
+            <tr>
+                <td>Root MSE</td>
+                <td>4.1634</td>
+                <td>2.7415</td>
+                <td>3.1527</td>
+                <td>0.8034</td>
+                <td>4.0273</td>
+                <td>0.22877</td>
+                <td>3.4065</td>
+                <td>0.38958</td>
+                <td>3.6259</td>
+                <td>1.0697</td>
+            </tr>
+            <tr>
+                <td>RESET Test</td>
+                <td>0.0335</td>
+                <td>-</td>
+                <td>0.5941</td>
+                <td>-</td>
+                <td>0.2333</td>
+                <td>-</td>
+                <td>0.0749</td>
+                <td>-</td>
+                <td>0.0769</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td>Mean VIF</td>
+                <td>1.72</td>
+                <td>14.3</td>
+                <td>169.5</td>
+                <td>698</td>
+                <td>1.66</td>
+                <td>7.89</td>
+                <td>1.81</td>
+                <td>6.7</td>
+                <td>1.78</td>
+                <td>5.17</td>
+            </tr>
+            <tfoot>
+                <tr>
+                    <td colspan="99">
+                        <p>Robust standard errors in parentheses</p>
+                        <p>*** p < 0.01, ** p<0.05, * p<0.1</p>
+                    </td>
+                </tr>
+            </tfoot>
         </table>
     </li>
     <li>
