--- a/project.html
+++ b/project.html
@@ -2,6 +2,14 @@
 <html lang="en-us">
 <meta charset="UTF-8">
 <link href="styles.css" rel="stylesheet" />
+<style>
+    table {
+        max-width:100%;
+    }
+    div.big-table {
+        overflow: scroll;
+    }
+</style>
 <body>
 <nav>
     <ol>
@@ -36,10 +44,10 @@
                     <th>Abbreviation</th>
                     <th>People Fully Vaccinated Per Hundred (5th Jan 2022)</th>
                     <th>Unemployment Rate (annual Average 2021)</th>
-                    <th>Per Capita Income (2021 FRED) https://fred.stlouisfed.org/release/tables?rid=110&amp;eid=257197&amp;od=#</th>
-                    <th>% Lean Republican (https://www.pewresearch.org/religion/religious-landscape-study/compare/party-affiliation/by/state/)</th>
+                    <th>Per Capita Income (2021 FRED)<a href="https://fred.stlouisfed.org/release/tables?rid=110&amp;eid=257197&amp;od=#" class="source">(source)</a></th>
+                    <th>% Lean Republican <a href="https://www.pewresearch.org/religion/religious-landscape-study/compare/party-affiliation/by/state/" class="source">(source)</a></th>
                     <th>% Democrat Lean</th>
-                    <th>WhiteTotalPerc (https://worldpopulationreview.com/states/states-by-race)</th>
+                    <th>WhiteTotalPerc <a href="https://worldpopulationreview.com/states/states-by-race">(source)</a></th>
                     <th>BlackTotalPerc</th>
                     <th>IndianTotalPerc</th>
                     <th>AsianTotalPerc</th>
