Use the figures

--- a/project.html
+++ b/project.html
@@ -1674,6 +1674,24 @@
             An ongoing research effort by Pew Research employs telephone surveys to ask respondents their political affiliation among three options: Republican, Democrat, or no strong alignment. This project collects political data on an annual basis.
         </p>
     </li>
+    <li class="figures">
+        <figure>
+            <img src="Democrat-Lean.png" alt="democrat lean vs fully vaccinated graph" />
+            <figcaption>Democrat Lean vs Vaccination</figcaption>
+        </figure>
+        <figure>
+            <img src="Republican-Lean.png" alt="republican lean vs fully vaccinated graph" />
+            <figcaption>Republican Lean vs Vaccination</figcaption>
+        </figure>
+        <figure>
+            <img src="Young.png" alt="age vs fully vaccinated graph" />
+            <figcaption>Age vs Vaccination</figcaption>
+        </figure>
+        <figure>
+            <img src="PercentBachelorsOrHigher.png" alt="education vs fully vaccinated graph" />
+            <figcaption>Education vs Vaccination</figcaption>
+        </figure>
+    </li>
     <li>
         <h2>Data Quality Commentary</h2>
         <p>
